--- a/src/pages/Product.css
+++ b/src/pages/Product.css
@@ -6,6 +6,10 @@
     width: 100px;
     height: 50px;
 }
+.mua-ngay:hover{
+    background-color: red;
+    color: white;
+}
 .price{
     font-weight: bold;
     font-size: 22px;
