--- a/src/DrinksCards/ThucUong.css
+++ b/src/DrinksCards/ThucUong.css
@@ -115,7 +115,7 @@
     margin-left: 10px;
     width: 20%;
     height: 50%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-bottom: 20px;
     /* margin */
 }
