--- a/src/Cards/Card.css
+++ b/src/Cards/Card.css
@@ -22,14 +22,17 @@
     font-weight: 100;
 }
 .pic{
-    width: 80%;
-    height: 25%;
+    width: 188px;
+    height: 185px;
+    object-fit: scale-down;
 }
 .pic-cuoi{
-    width: 83%;
+    height: 185px;
+    width: 188px;
+    object-fit: scale-down;
 }
 .card1{
-    margin-left: 120px;
+    margin-left: 80px;
 }
 .gia-chi-tu{
     font-size: 13px;
@@ -62,21 +65,21 @@
 #hinh16:hover{
     transform: rotate(10deg);
 }
-#hinh9{
+/* #hinh9{
     width: 86%;
-}
-#hinh10{
+} */
+/* #hinh10{
     width: 94%;
-}
-#hinh12{
+} */
+/* #hinh12{
     width: 66%;
-}
-#hinh14{
+} */
+/* #hinh14{
     width: 86%;
-}
-#hinh15{
+} */
+/* #hinh15{
     width: 69%;
-}
+} */
 #hinh18{
     width: 230px;
     height: 230px;
@@ -87,4 +90,13 @@
 }
 #PICTURE:hover{
     transform: rotate(10deg);
+}
+#cuoi1{
+    margin-bottom: 70px;
+}
+#cuoi2{
+    margin-bottom: 50px;
+}
+#cuoi3{
+    margin-bottom: 45px;
 }
