--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,29 +1,162 @@
-.header{
+.header {
     display: flex;
     align-items: center;
 }
-.delivery-img{
+
+.delivery-img {
     width: 14px;
     height: 14px;
 }
-.primary-text-size{
+
+.primary-text-size {
     font-size: 16px;
     color: white;
 }
-.Delivery{
+
+.Delivery {
     border-radius: 30px;
     width: 200px;
     background-color: red;
 }
-.containerDelivery{
-    background-color: gray;
+
+.containerDelivery {
+    background-color: lightslategray;
     width: 400px;
     border-radius: 30px;
 }
-.location{
+
+.location {
     margin-left: 20px;
 }
-.logo{
+
+.logo {
     width: 100px;
     height: 100px;
 }
+
+.nav {
+    background-color: green;
+    height: 50px;
+    border-radius: 30px;
+}
+
+.Salad {
+    color: white;
+    background-color: green;
+    border-radius: 30px;
+    width: 10%;
+    font-size: 22px;
+    font-weight: 700;
+    height: 60%;
+    margin-top: 10px;
+    margin-left: 20px;
+    border: none;
+
+}
+
+.Starter {
+    color: white;
+    background-color: green;
+    border-radius: 30px;
+    width: 10%;
+    font-size: 22px;
+    font-weight: 700;
+    height: 60%;
+    margin-top: 10px;
+    margin-left: 20px;
+    border: none;
+
+}
+
+.Drinks {
+    color: white;
+    background-color: green;
+    border-radius: 30px;
+    width: 10%;
+    font-size: 22px;
+    font-weight: 700;
+    height: 60%;
+    margin-top: 10px;
+    margin-left: 20px;
+    border: none;
+
+}
+
+/* .Pizza {
+    color: white;
+    background-color: green;
+    border-radius: 30px;
+    width: 10%;
+    font-size: 22px;
+    font-weight: 700;
+    height: 60%;
+    margin-top: 10px;
+    margin-left: 70px;
+    overflow: hidden;
+    border: none;
+} */
+
+.Pizza:hover {
+    background-color: darkgreen;
+}
+
+.Salad:hover {
+    background-color: darkgreen;
+}
+
+.Drinks:hover {
+    background-color: darkgreen;
+}
+
+.Starter:hover {
+    background-color: darkgreen;
+}
+
+.dropdown-content {
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+.dropdown-content li {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+
+}
+
+.dropdown-content li:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    opacity: 1;
+    visibility: visible;
+    display: flex;
+    flex-direction: column;
+}
+.dropdown .Pizza {
+    font-size: 22px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    /* background-color: green; */
+    width: 10%;
+    font-weight: 700;
+    
+
+}
+/* .DacBiet{
+    font-size: 20px;
+} */
