--- a/src/Detail/DetailPizza.css
+++ b/src/Detail/DetailPizza.css
@@ -5,6 +5,8 @@
     border: 1px solid black;
     height: 550px;
     border-radius: 30px;
+    width: 80%;
+    margin-top: 50px;
 }
 .DetailBox1{
     background-color: white;
@@ -25,7 +27,7 @@
     margin-right: 10%;
     margin-top: 10%;
     width: 80%;
-    height: 70%;
+    height: 50%;
 }
 .DetailPrice{
     color: red;
