--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,6 +1,7 @@
 .card {
     border: none;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
   }
   .title{
     font-family: Arial, Helvetica, sans-serif;
@@ -8,7 +9,6 @@
   
   .card-text {
     font-size: 0.9em;
-    
   }
   
   .card-title {
@@ -18,13 +18,22 @@
   .card-title:hover {
     color: #00a859; 
   }
-  .card-img-top {
-    transition: transform 0.3s ease-in-out; 
-  }
-  
-  .card-img-top:hover {
-    transform: rotate(20deg); 
-  }
+
+.card {
+    width: 18rem;
+    overflow: hidden;
+}
+
+.card-img-top {
+    max-width: 100%;
+    transition: transform 0.3s ease-in-out;
+    display: block;
+    background-image: none;
+}
+
+.card-img-top:hover {
+    transform: rotate(5deg);
+}
   .link-card-title{
     text-decoration: none;
     color: black;
