--- a/src/Detail/DetailPizza.css
+++ b/src/Detail/DetailPizza.css
@@ -45,11 +45,16 @@
     height: 50px;
     /* color: red; */
     background-color: lightcoral;
+    border: none;
+    border-radius: 20px;
 }
 .btn1{
     width: 30%;
     height: 50px;
     background-color: none;
+    border: none;
+    border-radius: 20px;
+
     /* border: 1 solid transparent */
 }
 .dash{
