--- a/src/SaladCards/Salad.css
+++ b/src/SaladCards/Salad.css
@@ -1,88 +1,3 @@
-/* .temp{
-    display: flex;
-}
-.mua-ngay{
-    width: 100px;
-    height: 50px;
-    margin-left: 40px;
-    background-color: white;
-    border-radius:  10px;
-    color: green;
-    border-style: ridge;
-}
-.price{
-    font-weight: bold;
-    font-size: 22px;
-} */
-/* .card2{
-    margin-left: 20px;
-}
-.des{
-    font-size: 13px;
-    font-weight: 100;
-}
-.pic{
-    width: 80%;
-    height: 25%;
-}
-.pic-cuoi{
-    width: 83%;
-}
-.card1{
-    margin-left: 120px;
-}
-.gia-chi-tu{
-    font-size: 13px;
-    font-weight: 100;
-}
-#cuoi{
-    margin-bottom: 30px;
-}
-#hinh8{
-    width: 76%;
-}
-#hinh9{
-    width: 86%;
-}
-#hinh10{
-    width: 94%;
-}
-#hinh12{
-    width: 66%;
-}
-#hinh14{
-    width: 86%;
-}
-#hinh15{
-    width: 69%;
-}
-#hinh18{
-    width: 230px;
-    height: 230px;
-}
-.card1{
-    margin-top: 30px;
-}
-.card2{
-    margin-top: 30px;
-}
-#My1{
-    margin-top: 50px;
-    width: 90%;
-    height: 200px;
-    margin-bottom: 27px;
-}
-#My3{
-    width: 73%;
-}
-#My4{
-    width: 95%;
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-#Nood1{
-    margin-top: 60px;
-} */
 #MyY:hover{
     transform: rotate(10deg);        
 }
@@ -92,18 +7,6 @@
 #MyY2:hover{
     transform: rotate(10deg);
 }
-/* #MyY1{
-    margin-top: 15%;
-    margin-bottom: 15%;
-}
-#MyY2{
-    margin-top: 14.5%;
-    margin-bottom: 14%;
-}
-#MyY{
-    margin-top: 14.5%;
-    margin-bottom: 14%;
-} */
 .container1{
     margin-left: 10px;
     width: 20%;
@@ -121,4 +24,13 @@
 /* }  */
 #cuoi5{
     margin-bottom: 45px;
+}
+#cuoi6{
+    margin-bottom: 83px;
+}
+#cuoi7{
+    margin-bottom: 43px;
+}
+#cuoi8{
+    margin-bottom: 5px;
 }
